--- a/public/styles/styles_h.css
+++ b/public/styles/styles_h.css
@@ -1,4 +1,4 @@
-* {
+html {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -6,60 +6,57 @@
 }
 
 body {
-    background: url('assets/img/home/bg.avif') no-repeat center center fixed;
-    background-size: cover;
-    color: #ffffff;
-    padding-top: -10px;
+    
     height: auto;
     overflow: hidden;
+    background-color: #2c2c2c; 
+    color: #ffffff; 
 }
 
 header {
-    display: flex;
+    background-color: #ff6347; /* Vibrant color for header and footer */
+    color: #ffffff;
+    font-family: "Figtree", sans-serif;
     justify-content: space-between;
     align-items: center;
-    padding: 10px; 
-    background-color: #333;
-    color: #fff;
+    padding: 8px;
+    width: 100vw; 
+    box-sizing: border-box; 
+    margin-top: -10px;
 }
 
-.text{
-    padding-left: 55px;
-    padding-bottom: 15px;
-    color: #c5c5c5;
-    font-weight: bolder;
-  }
-  
-  a:hover .text {
+ 
+a:hover .text {
     color: black;
-  }
-
-header .logo h1 {
-    margin: 0;
-    font-size: 38px;
 }
-
+    
+.logo h1 {
+    margin: 0;
+}
+    
 nav ul {
+    margin-left: 100%;
     list-style: none;
-    margin: 0;
-    padding: 0;
+    margin: 0%;
+    padding: 0%;
     display: flex;
-    gap: 50px;
-    margin-left: 80%;
-    margin-top: -45px;
+    gap: 45px;
+    margin-left: 75%;
 }
-
+    
 nav ul li {
     margin: 0;
+    margin-right: 20px;
+    margin-top: 10px;
+    margin-bottom: 5px;
 }
-
+    
 nav ul li a {
     color: #fff;
     text-decoration: none;
     font-size: 16px;
-    margin-left: -20%;
 }
-
+    
 nav ul li a:hover {
     color: black;
 }
@@ -71,44 +68,43 @@ nav ul li a:hover {
     align-items: center;
     height: 100vh;
     text-align: center;
-    background-color: black;
 }
 
 .container .logo {
     width: 150px;
-    margin-bottom: 10px;
-    margin-top: -100px;
+    margin-bottom: 5px;
+    margin-top: -70px;
+    color: #222;
 }
 
 h1 {
     font-size: 4em;
-    color: #d6d5d5;
-    margin-bottom: 10px;
+    color: hsl(0, 0%, 98%);
+    margin-bottom: -15px;
+    margin-top: 10px;
 }
 
 h2 {
-    font-size: 1em;
-    color: #aaaaaa;
+    font-size: 2em;
+    color: #f5e7e1;
     margin-bottom: 20px;
 }
 
 
 button {
+    background-color: #fa6732; /* Bright button color */
+    color: #ffffff; /* White text */
+    border: none;
+    letter-spacing: 1px;
     padding: 10px 20px;
-    letter-spacing: 1.2px;
-    font-size: 1m;
-    font-family: "Figtree", sans-serif;
-    color: #afadad;
-    background-color: #333;
-    border: 2px solid #555;
-    border-radius: 10px;
+    border-radius: 5px;
     cursor: pointer;
-    transition: background-color 0.3s, color 0.3s;
+    transition: background-color 0.3s ease, transform 0.3s ease;
 }
 
 button:hover {
-    background-color: #555;
-    color: #000;
+    background-color: #ff2600; /* Slightly different shade on hover */
+    transform: scale(1.05); 
 }
 
 button:active {
