--- a/public/styles/styles_a.css
+++ b/public/styles/styles_a.css
@@ -11,7 +11,7 @@ body {
     box-sizing: border-box; 
     margin: 0;
     padding: 0;
-    background-color: #292726;
+    background-color: #2c2c2c;
 }
   
 header {
@@ -19,8 +19,8 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 5px;
-    background-color: #333;
-    color: #e7e6e6;
+    background-color: #ff6347;
+    color: #ffffff;
     padding: 16px;
     width: 100vw; 
     box-sizing: border-box; 
@@ -60,8 +60,6 @@ nav ul li a:hover {
     color: black;
 }
 
-  
-
 .section-header {
     text-align: center;
     margin-top: 5%;
@@ -72,7 +70,9 @@ nav ul li a:hover {
     font-family: "Bebas Neue", sans-serif;
     font-size: 45px;
     margin: 0;
+    margin-top: -30px;
     text-align: center;
+    text-decoration: underline;
 }
 
 .section-header p {
@@ -111,7 +111,7 @@ nav ul li a:hover {
     align-items: left;
     min-height: 300px;
     height: auto;
-    background-image: linear-gradient(45deg, #121336, #31312b);
+    background-image: linear-gradient(45deg, #941f02, #31312b);
     background-size: 200% 100%;
     animation: shine 1.5s infinite;
 }
