--- a/public/styles/styles_a.css
+++ b/public/styles/styles_a.css
@@ -18,7 +18,6 @@ header {
     font-family: "Figtree", sans-serif;
     justify-content: space-between;
     align-items: center;
-    padding: 5px;
     background-color: #ff6347;
     color: #ffffff;
     padding: 16px;
@@ -42,7 +41,7 @@ nav ul {
     padding: 0%;
     display: flex;
     gap: 45px;
-    margin-left: 76%;
+    margin-left: 75%;
 }
     
 nav ul li {
@@ -111,7 +110,7 @@ nav ul li a:hover {
     align-items: left;
     min-height: 300px;
     height: auto;
-    background-image: linear-gradient(45deg, #941f02, #31312b);
+    background-image: linear-gradient(45deg, #ff3300, #e7e7e7);
     background-size: 200% 100%;
     animation: shine 1.5s infinite;
 }
@@ -181,7 +180,7 @@ nav ul li a:hover {
 .box:before {
     top: 0;
     left: 0;
-    border-top-left-radius: 10px;
+    border-top-left-radius: 5px;
 }
 
 .box:after {
@@ -190,34 +189,12 @@ nav ul li a:hover {
     border-bottom-right-radius: 10px;
 }
 
-.box:hover:before,
-.box:hover:after {
-    width: 100%;
-    height: 100%;
-    opacity: 1;
-    transition-delay: .3s;
-}
-
 .box:hover {
-    box-shadow: 0 10px 20px rgba(255, 255, 255, 0.2);
+    box-shadow: 0 10px 20px rgba(218, 23, 23, 0.2);
     background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.2) 50%, rgba(255, 255, 255, 0.5) 100%);
     box-shadow: 0 2px 15px 5px rgba(0, 0, 0, 0.5);
 }
 
-.box span {
-    position: absolute;
-    top: 0;
-    left: -110%;
-    width: 100%;
-    height: 100%;
-    background: rgba(255, 255, 255, 0.3);
-    transition: .5s;
-    transform: skewX(10deg);
-}
-
-.box:hover span {
-    left: 110%;
-}
 
 @media (max-width: 1000px) {
     .box {
@@ -247,3 +224,4 @@ nav ul li a:hover {
         text-align: center;
     }
 }
+
